objects/tspa__Visual_Remote_Assistant_Recording__c.object
<CustomObject>
    <fields>
        <fullName>tspa__Recording_Id__c</fullName>
        <externalId>true</externalId>
        <label>Recording Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Recording_Name__c</fullName>
        <externalId>true</externalId>
        <label>Recording Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Recording_Start_Time__c</fullName>
        <label>Recording Start Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Recording_Status__c</fullName>
        <label>Recording Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Pending Deletion</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
                <value>
                    <fullName>Error State</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tspa__Recording_URL__c</fullName>
        <label>Recording URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>tspa__ReferenceId__c</fullName>
        <label>ReferenceId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__SessionId__c</fullName>
        <label>SessionId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Start_Date__c</fullName>
        <label>Start Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__URL__c</fullName>
        <label>URL</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tspa__Visual_Remote_Assistant_Reports__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visual Remote Assistant Reports</label>
        <referenceTo>tspa__Visual_History__c</referenceTo>
        <relationshipLabel>Visual Remote Assistant Recordings</relationshipLabel>
        <relationshipName>Visual_Remote_Assistant_Recordings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tspa__accountId__c</fullName>
        <label>accountId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__customer_Number__c</fullName>
        <label>customer Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__recording_End_Time__c</fullName>
        <label>recording End Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__sessionShortId__c</fullName>
        <label>sessionShortId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__session_End_Time__c</fullName>
        <label>session End Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__type__c</fullName>
        <label>type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__userId__c</fullName>
        <label>userId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Visual Remote Assistant Recording</label>
    <listViews>
        <fullName>tspa__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Recording-{0000}</displayFormat>
        <label>Visual Remote Assistant Recording Images</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visual Remote Assistant Recordings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>